methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {if (seenBaggle==true) {
  return true;
} else {
  return false}
}




seenBaggle==false
while (haveBaggle==false) {
  for (i<-1 to  6) {
    forward();
    if (isOverBaggle==true) {
      seenBaggle==true
    }
  }
  for (i<-1 to 6 ) {
    backward();
  }
}